# Python-FastMCP-WatchList

./: .gitignore  LICENSE  README.md  pyproject.toml
mcp_server_watchlist/: db.py  prompts.py  resources.py  server.py  tools.py
tests/: test_db.py  test_init.py  test_prompts.py  test_resources.py  test_server.py  test_tools.py
watchlist_mcp_server/: db.py  prompts.py  resources.py  server.py  tools.py
